tests/positive/channel_pipeline_compute.safe
-- Test: channel_pipeline_compute
-- Description: Three-stage channel pipeline with arithmetic in flight.
--   Stage 1 produces bounded samples, Stage 2 transforms them, and Stage 3
--   accumulates bounded totals from the filtered stream.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.1.p2:78f022f7
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p15:b5b29b0e
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p27:ef0ce6bd
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p28:ea6bd13c
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p20:8aa1a21e
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p31:a7297e97
-- Expected: ACCEPT

package channel_pipeline_compute

   subtype sample is integer (0 to 100)
   subtype running_total is integer (0 to 1000)

   channel raw_ch      : sample capacity 2
   channel filtered_ch : sample capacity 2

   task producer with priority = 10
      seed : sample = 8
      sent : boolean = false

      loop
         send raw_ch, seed, sent
         if sent
            delay 0.001
         else
            delay 0.002

   task filter with priority = 10
      input  : sample
      output : sample
      sent   : boolean = false

      loop
         receive raw_ch, input
         output = input / 2 + 1
         loop
            send filtered_ch, output, sent
            if sent
               exit
            delay 0.001

   task consumer with priority = 10
      data     : sample
      adjusted : running_total

      loop
         receive filtered_ch, data
         adjusted = running_total (running_total (data) + 1)
         if running_total (adjusted) > running_total (50)
            delay 0.001
         else
            delay 0.002
